@@ -1,4 +1,3 @@
 class Pippin::Engine < Rails::Engine
-  paths['app/controllers'] << 'app/controllers'
   paths['config'] << 'config'
 end
